--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       </div>
       <div class="content float-left text-left">
         <ul class="links">
-          <li class="link"><a rel="external" href="http://172.18.9.12/web/?dir=书籍-Book">教学书籍</a></li>
-          <li class="link"><a rel="external" href="http://172.18.9.12/web/?dir=教程-Course">教学视频</a></li>
-          <li class="link"><a rel="external" href="http://172.18.9.12/web/?dir=软件-Software">软件下载</a></li>
-          <li class="link"><a rel="external" href="http://172.18.9.12/web/?dir=源码-Code">源码共享</a></li>
-          <li class="link"><a rel="external" href="http://172.18.9.12/web/?dir=电影-Movie">电影视频</a></li>
+          <li class="link"><a rel="external" href="http://172.18.9.20/web/?dir=书籍-Book">教学书籍</a></li>
+          <li class="link"><a rel="external" href="http://172.18.9.20/web/?dir=教程-Course">教学视频</a></li>
+          <li class="link"><a rel="external" href="http://172.18.9.20/web/?dir=软件-Software">软件下载</a></li>
+          <li class="link"><a rel="external" href="http://172.18.9.20/web/?dir=源码-Code">源码共享</a></li>
+          <li class="link"><a rel="external" href="http://172.18.9.20/web/?dir=电影-Movie">电影视频</a></li>
         </ul>
       </div>
     </div>
@@ -75,10 +75,12 @@
           <li class="link"><a rel="external" href="http://my.csdn.net/qq_34379015">贺宇成</a></li>
           <li class="link"><a rel="external" href="http://nicolite.cn">陈林祥</a></li>
           <li class="link"><a rel="external" href="http://blog.csdn.net/jackzee">甄杰</a></li>
+          <li class="link"><a rel="external" href="http://isxing.name ">李星</a></li>
           <li class="link"><a rel="external" href="http://m.blog.csdn.net/Blog?username=ArcheH">黄雅倩</a></li>
           <li class="link"><a rel="external" href="https://github.com/Zhulingyi">朱灵毅</a></li>
           <li class="link"><a rel="external" href="http://my.csdn.net/xuezhixia">周涛</a></li>
           <li class="link"><a rel="external" href="http://blog.csdn.net/qq_36736346 ">李依娴</a></li>
+
         </ul>
       </div>
     </div>
