--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
           <li class="link"><a rel="external" href="https://github.com/Zhulingyi">朱灵毅</a></li>
           <li class="link"><a rel="external" href="http://my.csdn.net/xuezhixia">周涛</a></li>
           <li class="link"><a rel="external" href="http://blog.csdn.net/qq_36736346 ">李依娴</a></li>
+          <li class="link"><a rel="external" href="http://47.107.226.251/">周昭仰</a></li>
 
         </ul>
       </div>
