--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           <li class="link"><a rel="external" href="http://47.107.226.251/">周昭仰</a></li>
           <li class="link"><a rel="external" href="http://yzero.top/">周玉林</a></li>
           18届
+		  <li class="link"><a rel="external" href="https://shine56.github.io/">张启雷</a></li>
         </ul>
       </div>
     </div>
