--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <li class="link"><a rel="external" href="https://RoyalQ.github.io">邱雄强</a></li>
           <li class="link"><a rel="external" href="https://CSeventh.github.io">昌强</a></li>
           17届
-
+          <li class="link"><a rel="external" href="https://segmentfault.com/u/adong666666">张赛东</a></li>
           18届
 
         </ul>
