--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 		  <li class="link"><a rel="external" href="https://shine56.github.io/">张启雷</a></li>
       <li class="link"><a rel="external" href="https://tmb115115.github.io/">蔡磊</a></li>
 	  <li class="link"><a rel="external" href="https://me.csdn.net/qq_42947257">李慕子</a></li>
+    <li class="link"><a rel="external" href="https://blog.csdn.net/weixin_43568110">余彬</a></li>
         </ul>
       </div>
     </div>
