--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           <li class="link"><a rel="external" href="http://47.107.226.251/">周昭仰</a></li>
           <li class="link"><a rel="external" href="https://www.jianshu.com/u/5bc1057e34a7">周玉林</a></li>
 	  <li class="link"><a rel="external" href="https://segmentfault.com/u/yin_5bc870d095522">陈庆伟</a></li>
+	  <li class="link"><a rel="external" href="https://segmentfault.com/u/fanrui_5c052adaeef32">范瑞</a></li>	
           18届
 		  <li class="link"><a rel="external" href="https://shine56.github.io/">张启雷</a></li>
       <li class="link"><a rel="external" href="https://tmb115115.github.io/">蔡磊</a></li>
