--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           17届
           <li class="link"><a rel="external" href="https://segmentfault.com/u/adong666666">张赛东</a></li>
           18届
-
+	  <li class="link"><a rel="external" href="https://Djiaki.github.io">邓佳奇</a></li>
         </ul>
       </div>
     </div>
