--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	  <li class="link"><a rel="external" href="https://me.csdn.net/qq_42947257">李慕子</a></li>
      <li class="link"><a rel="external" href="https://i.csdn.net/#/uc/profile">闫康</a></li>
     <li class="link"><a rel="external" href="https://blog.csdn.net/weixin_43568110">余彬</a></li>
-     <li class="link"><a rel="external" href="https://me.csdn.net/TPC666666">田鹏程</a></li>
+     <li class="link"><a rel="external" href="">田鹏程</a></li>
         </ul>
       </div>
     </div>
